[package]
name = "repl-block"
version = "0.4.0"
edition = "2021"
authors = ["Joey Ezechiels"]
description = "A crossterm-based library for building Read-Eval-Print-Loops (REPLs)."
license = "MIT OR Apache-2.0"

[dependencies]
camino = "1.1.6"
crossterm = "0.27.0"
derive_more = "0.99.17"
displaydoc = "0.2.4"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
unicode-segmentation = "1.11.0"
